Executor takes into account clustering information and can re-schedule itself as the cluster changes